src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/EXTEGLImageStorage_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTEGLImageStorage_StringErrorContext.class */
public final class EXTEGLImageStorage_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglEGLImageTargetTexStorageEXT(IJJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTEGLImageStorageErrorContext");
        methods.put("glEGLImageTargetTexStorageEXT(IJLjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTEGLImageStorageErrorContext");
        methods.put("nglEGLImageTargetTextureStorageEXT(IJJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTEGLImageStorageErrorContext");
        methods.put("glEGLImageTargetTextureStorageEXT(IJLjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTEGLImageStorageErrorContext");
        methods.put("glEGLImageTargetTexStorageEXT(IJ[I)V", "net/labymod/core/laby3d/opengl/error/generated/EXTEGLImageStorageErrorContext");
        methods.put("glEGLImageTargetTextureStorageEXT(IJ[I)V", "net/labymod/core/laby3d/opengl/error/generated/EXTEGLImageStorageErrorContext");
        return methods;
    }
}
